fix: carousel image being distorted
Use `object-fit: cover` to keep the correct ratio.

_Note: This won't work for anyone using IE11._

--- a/src/blocks/carousel/view.scss
+++ b/src/blocks/carousel/view.scss
@@ -191,6 +191,10 @@
 	/* Swiper Slide */
 	.swiper-slide {
 		height: auto;
+
+		.post-thumbnail img {
+			object-fit: cover;
+		}
 	}
 
 	/* Image styles */
